js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
new
import
.
source
(
'
<
module
source
>
'
)
;
}
